csrc/libavfilter/avfilter.h

typedef struct AVFilterContext AVFilterContext;
typedef struct AVFilterLink    AVFilterLink;
typedef struct AVFilterPad     AVFilterPad;
typedef struct AVFilterBuffer {
    uint8_t *data[8];           
    uint8_t **extended_data;
    int linesize[8];            
    void *priv;
    void (*free)(struct AVFilterBuffer *buf);
    int format;                 
    int w, h;                   
    unsigned refcount;          
} AVFilterBuffer;
typedef struct AVFilterBufferRefAudioProps {
    uint64_t channel_layout;    
    int nb_samples;             
    int sample_rate;            
    int channels;               
} AVFilterBufferRefAudioProps;
typedef struct AVFilterBufferRefVideoProps {
    int w;                      
    int h;                      
    AVRational sample_aspect_ratio; 
    int interlaced;             
    int top_field_first;        
    enum AVPictureType pict_type; 
    int key_frame;              
    int qp_table_linesize;                
    int qp_table_size;            
    int8_t *qp_table;             
} AVFilterBufferRefVideoProps;
typedef struct AVFilterBufferRef {
    AVFilterBuffer *buf;        
    uint8_t *data[8];           
    uint8_t **extended_data;
    int linesize[8];            
    AVFilterBufferRefVideoProps *video; 
    AVFilterBufferRefAudioProps *audio; 
    int64_t pts;
    int64_t pos;                
    int format;                 
    int perms;                  
    enum AVMediaType type;      
    AVDictionary *metadata;     
} AVFilterBufferRef;
void avfilter_unref_buffer(AVFilterBufferRef *ref);
struct AVFilterPad {
    const char *name;
    enum AVMediaType type;
    int min_perms;
    int rej_perms;
    int (*start_frame)(AVFilterLink *link, AVFilterBufferRef *picref);
    AVFrame *(*get_video_buffer)(AVFilterLink *link, int w, int h);
    AVFrame *(*get_audio_buffer)(AVFilterLink *link, int nb_samples);
    int (*end_frame)(AVFilterLink *link);
    int (*draw_slice)(AVFilterLink *link, int y, int height, int slice_dir);
    int (*filter_frame)(AVFilterLink *link, AVFrame *frame);
    int (*poll_frame)(AVFilterLink *link);
    int (*request_frame)(AVFilterLink *link);
    int (*config_props)(AVFilterLink *link);
    int needs_fifo;
    int needs_writable;
};
typedef struct AVFilter {
    const char *name;
    const char *description;
    const AVFilterPad *inputs;
    const AVFilterPad *outputs;
    const AVClass *priv_class;
    int flags;
    int (*init)(AVFilterContext *ctx);
    int (*init_dict)(AVFilterContext *ctx, AVDictionary **options);
    void (*uninit)(AVFilterContext *ctx);
    int (*query_formats)(AVFilterContext *);
    int priv_size;      
    struct AVFilter *next;
    int (*process_command)(AVFilterContext *, const char *cmd, const char *arg, char *res, int res_len, int flags);
    int (*init_opaque)(AVFilterContext *ctx, void *opaque);
} AVFilter;
typedef struct AVFilterInternal AVFilterInternal;
struct AVFilterContext {
    const AVClass *av_class;        
    const AVFilter *filter;         
    char *name;                     
    AVFilterPad   *input_pads;      
    AVFilterLink **inputs;          
#if FF_API_FOO_COUNT
    unsigned input_count; 
#endif
    unsigned    nb_inputs;          
    AVFilterPad   *output_pads;     
    AVFilterLink **outputs;         
#if FF_API_FOO_COUNT
    unsigned output_count; 
#endif
    unsigned    nb_outputs;         
    void *priv;                     
    struct AVFilterGraph *graph;    
    int thread_type;
    AVFilterInternal *internal;
    struct AVFilterCommand *command_queue;
    char *enable_str;               
    void *enable;                   
    double *var_values;             
    int is_disabled;                
};
struct AVFilterLink {
    AVFilterContext *src;       
    AVFilterPad *srcpad;        
    AVFilterContext *dst;       
    AVFilterPad *dstpad;        
    enum AVMediaType type;      
    int w;                      
    int h;                      
    AVRational sample_aspect_ratio; 
    uint64_t channel_layout;    
    int sample_rate;            
    int format;                 
    AVRational time_base;
    AVFilterFormats *in_formats;
    AVFilterFormats *out_formats;
    AVFilterFormats  *in_samplerates;
    AVFilterFormats *out_samplerates;
    struct AVFilterChannelLayouts  *in_channel_layouts;
    struct AVFilterChannelLayouts *out_channel_layouts;
    int request_samples;
    enum {
        AVLINK_UNINIT = 0,      
        AVLINK_STARTINIT,       
        AVLINK_INIT             
    } init_state;
#if FF_API_AVFILTERBUFFER
    struct AVFilterPool *pool;
#endif
    struct AVFilterGraph *graph;
    int64_t current_pts;
    int age_index;
    AVRational frame_rate;
    AVFrame *partial_buf;
    int partial_buf_size;
    int min_samples;
    int max_samples;
#if FF_API_AVFILTERBUFFER
    AVFilterBufferRef *cur_buf_copy;
#endif
    int closed;
    int channels;
    unsigned frame_requested;
    unsigned flags;
    int64_t frame_count;
};
typedef int (avfilter_action_func)(AVFilterContext *ctx, void *arg, int jobnr, int nb_jobs);
typedef int (avfilter_execute_func)(AVFilterContext *ctx, avfilter_action_func *func,
                                    void *arg, int *ret, int nb_jobs);
typedef struct AVFilterGraph {
    const AVClass *av_class;
#if FF_API_FOO_COUNT
    unsigned filter_count_unused;
#endif
    AVFilterContext **filters;
#if !FF_API_FOO_COUNT
    unsigned nb_filters;
#endif
    char *scale_sws_opts; 
    char *resample_lavr_opts;   
#if FF_API_FOO_COUNT
    unsigned nb_filters;
#endif
    int thread_type;
    int nb_threads;
    AVFilterGraphInternal *internal;
    void *opaque;
    avfilter_execute_func *execute;
    char *aresample_swr_opts; 
    AVFilterLink **sink_links;
    int sink_links_count;
    unsigned disable_auto_convert;
} AVFilterGraph;