csrc/libavfilter/buffersink.h


int av_buffersink_get_buffer_ref(AVFilterContext *buffer_sink,
                                 AVFilterBufferRef **bufref, int flags);
int av_buffersink_read(AVFilterContext *ctx, AVFilterBufferRef **buf);
int av_buffersink_read_samples(AVFilterContext *ctx, AVFilterBufferRef **buf,
                               int nb_samples);
int av_buffersink_get_frame_flags(AVFilterContext *ctx, AVFrame *frame, int flags);
typedef struct {
    const enum AVPixelFormat *pixel_fmts; 
} AVBufferSinkParams;
AVBufferSinkParams *av_buffersink_params_alloc(void);
typedef struct {
    const enum AVSampleFormat *sample_fmts; 
    const int64_t *channel_layouts;         
    const int *channel_counts;              
    int all_channel_counts;                 
    int *sample_rates;                      
} AVABufferSinkParams;
AVABufferSinkParams *av_abuffersink_params_alloc(void);
void av_buffersink_set_frame_size(AVFilterContext *ctx, unsigned frame_size);
AVRational av_buffersink_get_frame_rate(AVFilterContext *ctx);
int av_buffersink_get_frame(AVFilterContext *ctx, AVFrame *frame);
int av_buffersink_get_samples(AVFilterContext *ctx, AVFrame *frame, int nb_samples);