csrc/libavfilter/buffersrc.h


enum {
    AV_BUFFERSRC_FLAG_NO_CHECK_FORMAT = 1,
#if FF_API_AVFILTERBUFFER
    AV_BUFFERSRC_FLAG_NO_COPY = 2,
#endif
    AV_BUFFERSRC_FLAG_PUSH = 4,
    AV_BUFFERSRC_FLAG_KEEP_REF = 8,
};
int av_buffersrc_add_ref(AVFilterContext *buffer_src,
                         AVFilterBufferRef *picref, int flags);
unsigned av_buffersrc_get_nb_failed_requests(AVFilterContext *buffer_src);
int av_buffersrc_buffer(AVFilterContext *ctx, AVFilterBufferRef *buf);
int av_buffersrc_write_frame(AVFilterContext *ctx, const AVFrame *frame);
int av_buffersrc_add_frame(AVFilterContext *ctx, AVFrame *frame);
int av_buffersrc_add_frame_flags(AVFilterContext *buffer_src,
                                 AVFrame *frame, int flags);