src/org/ffmpeg/avfilter/AvfilterLibrary.java

	/**
	 * Same as av_buffersink_read, but with the ability to specify the number of<br>
	 * samples read. This function is less efficient than av_buffersink_read(),<br>
	 * because it copies the data around.<br>
	 * * @param ctx pointer to a context of the abuffersink AVFilter.<br>
	 * @param buf pointer to the buffer will be written here if buf is non-NULL. buf<br>
	 *            must be freed by the caller using avfilter_unref_buffer(). buf<br>
	 *            will contain exactly nb_samples audio samples, except at the end<br>
	 *            of stream, when it can contain less than nb_samples.<br>
	 *            Buf may also be NULL to query whether a buffer is ready to be<br>
	 *            output.<br>
	 * * @warning do not mix this function with av_buffersink_read(). Use only one or<br>
	 * the other with a single sink, not both.<br>
	 * Original signature : <code>int av_buffersink_read_samples(AVFilterContext*, AVFilterBufferRef**, int)</code><br>
	 * <i>native declaration : libavfilter/buffersink.h:42</i>
	 */
	public static int av_buffersink_read_samples(Pointer<AVFilterContext > ctx, Pointer<Pointer<AVFilterBufferRef > > buf, int nb_samples) {
		return av_buffersink_read_samples(Pointer.getPeer(ctx), Pointer.getPeer(buf), nb_samples);
	}
	protected native static int av_buffersink_read_samples(@Ptr long ctx, @Ptr long buf, int nb_samples);
	/**
	 * Get a frame with filtered data from sink and put it in frame.<br>
	 * * @param ctx    pointer to a buffersink or abuffersink filter context.<br>
	 * @param frame  pointer to an allocated frame that will be filled with data.<br>
	 *               The data must be freed using av_frame_unref() / av_frame_free()<br>
	 * @param flags  a combination of AV_BUFFERSINK_FLAG_* flags<br>
	 * * @return  >= 0 in for success, a negative AVERROR code for failure.<br>
	 * Original signature : <code>int av_buffersink_get_frame_flags(AVFilterContext*, AVFrame*, int)</code><br>
	 * <i>native declaration : libavfilter/buffersink.h:52</i>
	 */
	public static int av_buffersink_get_frame_flags(Pointer<AVFilterContext > ctx, Pointer<AVFrame > frame, int flags) {
		return av_buffersink_get_frame_flags(Pointer.getPeer(ctx), Pointer.getPeer(frame), flags);
	}
	protected native static int av_buffersink_get_frame_flags(@Ptr long ctx, @Ptr long frame, int flags);
	/**
	 * Create an AVBufferSinkParams structure.<br>
	 * * Must be freed with av_free().<br>
	 * Original signature : <code>AVBufferSinkParams* av_buffersink_params_alloc()</code><br>
	 * <i>native declaration : libavfilter/buffersink.h:65</i>
	 */
	public static Pointer<AVBufferSinkParams > av_buffersink_params_alloc() {
		return Pointer.pointerToAddress(av_buffersink_params_alloc$2(), AVBufferSinkParams.class);
	}
	@Ptr 
	protected native static long av_buffersink_params_alloc$2();
	/**
	 * Create an AVABufferSinkParams structure.<br>
	 * * Must be freed with av_free().<br>
	 * Original signature : <code>AVABufferSinkParams* av_abuffersink_params_alloc()</code><br>
	 * <i>native declaration : libavfilter/buffersink.h:86</i>
	 */
	public static Pointer<AVABufferSinkParams > av_abuffersink_params_alloc() {
		return Pointer.pointerToAddress(av_abuffersink_params_alloc$2(), AVABufferSinkParams.class);
	}
	@Ptr 
	protected native static long av_abuffersink_params_alloc$2();
	/**
	 * Set the frame size for an audio buffer sink.<br>
	 * * All calls to av_buffersink_get_buffer_ref will return a buffer with<br>
	 * exactly the specified number of samples, or AVERROR(EAGAIN) if there is<br>
	 * not enough. The last buffer at EOF will be padded with 0.<br>
	 * Original signature : <code>void av_buffersink_set_frame_size(AVFilterContext*, unsigned)</code><br>
	 * <i>native declaration : libavfilter/buffersink.h:94</i>
	 */
	public static void av_buffersink_set_frame_size(Pointer<AVFilterContext > ctx, int frame_size) {
		av_buffersink_set_frame_size(Pointer.getPeer(ctx), frame_size);
	}
	protected native static void av_buffersink_set_frame_size(@Ptr long ctx, int frame_size);
	/**
	 * Get the frame rate of the input.<br>
	 * Original signature : <code>AVRational av_buffersink_get_frame_rate(AVFilterContext*)</code><br>
	 * <i>native declaration : libavfilter/buffersink.h:99</i>
	 */
	public static AVRational av_buffersink_get_frame_rate(Pointer<AVFilterContext > ctx) {
		return av_buffersink_get_frame_rate(Pointer.getPeer(ctx));
	}
	protected native static AVRational av_buffersink_get_frame_rate(@Ptr long ctx);
	/**
	 * Get a frame with filtered data from sink and put it in frame.<br>
	 * * @param ctx pointer to a context of a buffersink or abuffersink AVFilter.<br>
	 * @param frame pointer to an allocated frame that will be filled with data.<br>
	 *              The data must be freed using av_frame_unref() / av_frame_free()<br>
	 * * @return<br>
	 *         - >= 0 if a frame was successfully returned.<br>
	 *         - AVERROR(EAGAIN) if no frames are available at this point; more<br>
	 *           input frames must be added to the filtergraph to get more output.<br>
	 *         - AVERROR_EOF if there will be no more output frames on this sink.<br>
	 *         - A different negative AVERROR code in other failure cases.<br>
	 * Original signature : <code>int av_buffersink_get_frame(AVFilterContext*, AVFrame*)</code><br>
	 * <i>native declaration : libavfilter/buffersink.h:113</i>
	 */
	public static int av_buffersink_get_frame(Pointer<AVFilterContext > ctx, Pointer<AVFrame > frame) {
		return av_buffersink_get_frame(Pointer.getPeer(ctx), Pointer.getPeer(frame));
	}
	protected native static int av_buffersink_get_frame(@Ptr long ctx, @Ptr long frame);
	/**
	 * Same as av_buffersink_get_frame(), but with the ability to specify the number<br>
	 * of samples read. This function is less efficient than<br>
	 * av_buffersink_get_frame(), because it copies the data around.<br>
	 * * @param ctx pointer to a context of the abuffersink AVFilter.<br>
	 * @param frame pointer to an allocated frame that will be filled with data.<br>
	 *              The data must be freed using av_frame_unref() / av_frame_free()<br>
	 *              frame will contain exactly nb_samples audio samples, except at<br>
	 *              the end of stream, when it can contain less than nb_samples.<br>
	 * * @return The return codes have the same meaning as for<br>
	 *         av_buffersink_get_samples().<br>
	 * * @warning do not mix this function with av_buffersink_get_frame(). Use only one or<br>
	 * the other with a single sink, not both.<br>
	 * Original signature : <code>int av_buffersink_get_samples(AVFilterContext*, AVFrame*, int)</code><br>
	 * <i>native declaration : libavfilter/buffersink.h:129</i>
	 */
	public static int av_buffersink_get_samples(Pointer<AVFilterContext > ctx, Pointer<AVFrame > frame, int nb_samples) {
		return av_buffersink_get_samples(Pointer.getPeer(ctx), Pointer.getPeer(frame), nb_samples);
	}
	protected native static int av_buffersink_get_samples(@Ptr long ctx, @Ptr long frame, int nb_samples);
	/**
	 * Add buffer data in picref to buffer_src.<br>
	 * * @param buffer_src  pointer to a buffer source context<br>
	 * @param picref      a buffer reference, or NULL to mark EOF<br>
	 * @param flags       a combination of AV_BUFFERSRC_FLAG_*<br>
	 * @return            >= 0 in case of success, a negative AVERROR code<br>
	 *                    in case of failure<br>
	 * Original signature : <code>int av_buffersrc_add_ref(AVFilterContext*, AVFilterBufferRef*, int)</code><br>
	 * <i>native declaration : libavfilter/buffersrc.h:23</i>
	 */
	public static int av_buffersrc_add_ref(Pointer<AVFilterContext > buffer_src, Pointer<AVFilterBufferRef > picref, int flags) {
		return av_buffersrc_add_ref(Pointer.getPeer(buffer_src), Pointer.getPeer(picref), flags);
	}
	protected native static int av_buffersrc_add_ref(@Ptr long buffer_src, @Ptr long picref, int flags);
	/**
	 * Get the number of failed requests.<br>
	 * * A failed request is when the request_frame method is called while no<br>
	 * frame is present in the buffer.<br>
	 * The number is reset when a frame is added.<br>
	 * Original signature : <code>int av_buffersrc_get_nb_failed_requests(AVFilterContext*)</code><br>
	 * <i>native declaration : libavfilter/buffersrc.h:31</i>
	 */
	public static int av_buffersrc_get_nb_failed_requests(Pointer<AVFilterContext > buffer_src) {
		return av_buffersrc_get_nb_failed_requests(Pointer.getPeer(buffer_src));
	}
	protected native static int av_buffersrc_get_nb_failed_requests(@Ptr long buffer_src);
	/**
	 * Add a buffer to a filtergraph.<br>
	 * * @param ctx an instance of the buffersrc filter<br>
	 * @param buf buffer containing frame data to be passed down the filtergraph.<br>
	 * This function will take ownership of buf, the user must not free it.<br>
	 * A NULL buf signals EOF -- i.e. no more frames will be sent to this filter.<br>
	 * * @deprecated use av_buffersrc_write_frame() or av_buffersrc_add_frame()<br>
	 * Original signature : <code>int av_buffersrc_buffer(AVFilterContext*, AVFilterBufferRef*)</code><br>
	 * <i>native declaration : libavfilter/buffersrc.h:41</i>
	 */
	public static int av_buffersrc_buffer(Pointer<AVFilterContext > ctx, Pointer<AVFilterBufferRef > buf) {
		return av_buffersrc_buffer(Pointer.getPeer(ctx), Pointer.getPeer(buf));
	}
	protected native static int av_buffersrc_buffer(@Ptr long ctx, @Ptr long buf);
	/**
	 * Add a frame to the buffer source.<br>
	 * * @param ctx   an instance of the buffersrc filter<br>
	 * @param frame frame to be added. If the frame is reference counted, this<br>
	 * function will make a new reference to it. Otherwise the frame data will be<br>
	 * copied.<br>
	 * * @return 0 on success, a negative AVERROR on error<br>
	 * * This function is equivalent to av_buffersrc_add_frame_flags() with the<br>
	 * AV_BUFFERSRC_FLAG_KEEP_REF flag.<br>
	 * Original signature : <code>int av_buffersrc_write_frame(AVFilterContext*, const AVFrame*)</code><br>
	 * <i>native declaration : libavfilter/buffersrc.h:53</i>
	 */
	public static int av_buffersrc_write_frame(Pointer<AVFilterContext > ctx, Pointer<AVFrame > frame) {
		return av_buffersrc_write_frame(Pointer.getPeer(ctx), Pointer.getPeer(frame));
	}
	protected native static int av_buffersrc_write_frame(@Ptr long ctx, @Ptr long frame);
	/**
	 * Add a frame to the buffer source.<br>
	 * * @param ctx   an instance of the buffersrc filter<br>
	 * @param frame frame to be added. If the frame is reference counted, this<br>
	 * function will take ownership of the reference(s) and reset the frame.<br>
	 * Otherwise the frame data will be copied. If this function returns an error,<br>
	 * the input frame is not touched.<br>
	 * * @return 0 on success, a negative AVERROR on error.<br>
	 * * @note the difference between this function and av_buffersrc_write_frame() is<br>
	 * that av_buffersrc_write_frame() creates a new reference to the input frame,<br>
	 * while this function takes ownership of the reference passed to it.<br>
	 * * This function is equivalent to av_buffersrc_add_frame_flags() without the<br>
	 * AV_BUFFERSRC_FLAG_KEEP_REF flag.<br>
	 * Original signature : <code>int av_buffersrc_add_frame(AVFilterContext*, AVFrame*)</code><br>
	 * <i>native declaration : libavfilter/buffersrc.h:69</i>
	 */
	public static int av_buffersrc_add_frame(Pointer<AVFilterContext > ctx, Pointer<AVFrame > frame) {
		return av_buffersrc_add_frame(Pointer.getPeer(ctx), Pointer.getPeer(frame));
	}
	protected native static int av_buffersrc_add_frame(@Ptr long ctx, @Ptr long frame);
